--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Login" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,179 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="rHM-cF-lk9">
+                                <rect key="frame" x="242" y="33" width="116" height="118"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="118" id="5z7-4I-cRd"/>
+                                    <constraint firstAttribute="width" constant="116" id="c6E-Kf-jN0"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hyw-UW-R0d">
+                                <rect key="frame" x="93" y="249" width="414" height="42"/>
+                                <color key="backgroundColor" red="0.99607843137254903" green="0.72941176470588232" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="TiE-pz-02b"/>
+                                    <constraint firstAttribute="height" constant="42" id="Wus-DJ-yYQ"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="xvK-v6-pKg">
+                                <rect key="frame" x="93" y="308" width="414" height="43"/>
+                                <color key="backgroundColor" red="0.99607843139999996" green="0.72941176470000002" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="5pO-qW-kMt"/>
+                                    <constraint firstAttribute="height" constant="42" id="ETT-hD-bLI"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6WK-Jt-Crb">
+                                <rect key="frame" x="93" y="376" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.24313725490196078" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="NfS-y4-wDG"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="QvC-cc-i9i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Login to Udacity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMK-qq-OZS">
+                                <rect key="frame" x="203" y="173" width="195" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Don't have an account? Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQZ-zm-tcy">
+                                <rect key="frame" x="124" y="428" width="352" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="587-vd-L8D"/>
+                                    <constraint firstAttribute="height" constant="40" id="mGM-dJ-YcB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuk-nq-iXV">
+                                <rect key="frame" x="124" y="482" width="352" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="CsD-Au-Wew"/>
+                                    <constraint firstAttribute="height" constant="21" id="bjk-Lg-QPM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLW-ld-h88">
+                                <rect key="frame" x="160" y="528" width="280" height="44"/>
+                                <color key="backgroundColor" red="0.18431372549019609" green="0.27058823529411763" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="VgV-oo-aj6"/>
+                                    <constraint firstAttribute="height" constant="44" id="szz-8o-AIt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Sign in with Fackbook">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.98823529409999999" green="0.52549019610000003" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="vuk-nq-iXV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1dX-LI-EoT"/>
+                            <constraint firstItem="WMK-qq-OZS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Rh-Cm-g4N"/>
+                            <constraint firstItem="xvK-v6-pKg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Gf-7g-1F9"/>
+                            <constraint firstItem="Hyw-UW-R0d" firstAttribute="top" secondItem="WMK-qq-OZS" secondAttribute="bottom" constant="35" id="AMQ-OH-PYZ"/>
+                            <constraint firstItem="hLW-ld-h88" firstAttribute="top" secondItem="vuk-nq-iXV" secondAttribute="bottom" constant="25" id="B0V-Qo-A5i"/>
+                            <constraint firstItem="hLW-ld-h88" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HLS-83-QIv"/>
+                            <constraint firstItem="WMK-qq-OZS" firstAttribute="top" secondItem="rHM-cF-lk9" secondAttribute="bottom" constant="22" id="KV7-oJ-CK0"/>
+                            <constraint firstItem="Hyw-UW-R0d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OD3-U3-Ybi"/>
+                            <constraint firstItem="rHM-cF-lk9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="QbE-Qe-su5"/>
+                            <constraint firstItem="eQZ-zm-tcy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TvL-o6-Paw"/>
+                            <constraint firstItem="xvK-v6-pKg" firstAttribute="top" secondItem="Hyw-UW-R0d" secondAttribute="bottom" constant="15" id="X7l-Mg-usc"/>
+                            <constraint firstItem="6WK-Jt-Crb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a2Q-oh-VgU"/>
+                            <constraint firstItem="eQZ-zm-tcy" firstAttribute="top" secondItem="6WK-Jt-Crb" secondAttribute="bottom" constant="8" id="mqo-Qu-mW8"/>
+                            <constraint firstItem="6WK-Jt-Crb" firstAttribute="top" secondItem="xvK-v6-pKg" secondAttribute="bottom" constant="25" id="nf7-pb-qws"/>
+                            <constraint firstItem="rHM-cF-lk9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="osr-88-xSX"/>
+                            <constraint firstItem="vuk-nq-iXV" firstAttribute="top" secondItem="eQZ-zm-tcy" secondAttribute="bottom" constant="14" id="q4A-mO-iFB"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="debugTextLabel" destination="vuk-nq-iXV" id="bXz-S8-5f2"/>
+                        <outlet property="emailTextField" destination="Hyw-UW-R0d" id="vxd-bd-57B"/>
+                        <outlet property="loginButton" destination="6WK-Jt-Crb" id="dIb-nj-QSM"/>
+                        <outlet property="passwordTextField" destination="xvK-v6-pKg" id="5SB-El-GJY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-449" y="133"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="oIF-kS-Af8">
+            <objects>
+                <viewController id="I0f-Lr-eFU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eFD-wL-3jW"/>
+                        <viewControllerLayoutGuide type="bottom" id="xh6-yu-HGL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hr0-31-PKd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="List" image="list" id="Ah0-Yl-U7G"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gab-xY-IBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="982" y="562"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="m5w-C3-jRu">
+            <objects>
+                <viewController id="IMO-Pe-wdN" userLabel="Map" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="afe-nH-NZv"/>
+                        <viewControllerLayoutGuide type="bottom" id="hQA-fo-We8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vnD-5D-Zt8" userLabel="Map">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" image="map" id="NUp-qY-Qqa"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lbN-LU-S4g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="982" y="-279"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Vsl-PE-kak">
+            <objects>
+                <tabBarController id="0q2-p3-d3t" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Lt5-BW-NdB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="IMO-Pe-wdN" kind="relationship" relationship="viewControllers" id="2hk-gA-BUV"/>
+                        <segue destination="I0f-Lr-eFU" kind="relationship" relationship="viewControllers" id="n42-h3-uvc"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qi4-4B-4G8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="250" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="list" width="32" height="32"/>
+        <image name="map" width="32" height="32"/>
+        <image name="udacity" width="256" height="256"/>
+    </resources>
 </document>
