--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -165,6 +165,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WKK-kS-6XN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="492"/>
+                                <connections>
+                                    <outlet property="delegate" destination="IMO-Pe-wdN" id="1rx-jg-C9y"/>
+                                </connections>
+                            </mapView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XR3-Oc-uko" userLabel="On The Map">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
@@ -189,12 +195,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WKK-kS-6XN">
-                                <rect key="frame" x="0.0" y="64" width="600" height="492"/>
-                                <connections>
-                                    <outlet property="delegate" destination="IMO-Pe-wdN" id="1rx-jg-C9y"/>
-                                </connections>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -222,22 +222,96 @@
             <point key="canvasLocation" x="1024" y="-269"/>
         </scene>
         <!--InfoPost-->
-        <scene sceneID="veM-Us-HiP">
+        <scene sceneID="Xtx-Yc-Ax4">
             <objects>
-                <viewController id="8mL-YK-dH7" userLabel="InfoPost" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InfoPost" id="gJG-IM-LGN" userLabel="InfoPost" customClass="InfoPostViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cHq-Dq-c0U"/>
-                        <viewControllerLayoutGuide type="bottom" id="xRL-jB-eN0"/>
+                        <viewControllerLayoutGuide type="top" id="C7o-1P-eob"/>
+                        <viewControllerLayoutGuide type="bottom" id="nD9-EM-6Y0"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="y7V-Ge-YMo">
+                    <view key="view" contentMode="scaleToFill" id="h6N-QZ-LYP">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Where are you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MY6-Xp-EBS" userLabel="TopLabel1">
+                                <rect key="frame" x="236" y="50" width="128" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Study" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pug-2n-nsS" userLabel="TopLabel2">
+                                <rect key="frame" x="236" y="71" width="128" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" red="0.1843137255" green="0.27058823529999998" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KpK-HN-9gw" userLabel="TopLabel3">
+                                <rect key="frame" x="236" y="92" width="128" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jSm-4W-rBa" userLabel="FindButton">
+                                <rect key="frame" x="235" y="535" width="130" height="30"/>
+                                <state key="normal" title="Find On the Map"/>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gb2-kB-eUm" userLabel="SubmitButton">
+                                <rect key="frame" x="244" y="535" width="113" height="30"/>
+                                <state key="normal" title="Submit"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZy-FU-BKL" userLabel="PromptMiddleView">
+                                <rect key="frame" x="0.0" y="160" width="600" height="340"/>
+                                <subviews>
+                                    <mapView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Vh0-5K-JVX">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="441"/>
+                                    </mapView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter The Location Here" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaE-Ts-MD6" userLabel="LocationTextField">
+                                        <rect key="frame" x="65" y="24" width="470" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.40000000000000002" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="BaE-Ts-MD6" firstAttribute="top" secondItem="KZy-FU-BKL" secondAttribute="top" constant="25" id="0Yq-Va-ymL"/>
+                                    <constraint firstItem="BaE-Ts-MD6" firstAttribute="centerX" secondItem="KZy-FU-BKL" secondAttribute="centerX" id="JuX-EG-tz2"/>
+                                    <constraint firstItem="BaE-Ts-MD6" firstAttribute="leading" secondItem="KZy-FU-BKL" secondAttribute="leading" constant="65" id="iGm-y3-mg2"/>
+                                    <constraint firstAttribute="trailing" secondItem="BaE-Ts-MD6" secondAttribute="trailing" constant="65" id="qmh-39-sec"/>
+                                </constraints>
+                            </view>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter The URL Here" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJ6-j3-MKx" userLabel="URLTextField">
+                                <rect key="frame" x="60" y="68" width="480" height="30"/>
+                                <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="MY6-Xp-EBS" firstAttribute="top" secondItem="C7o-1P-eob" secondAttribute="bottom" constant="30" id="4MG-eq-GtP"/>
+                            <constraint firstItem="nD9-EM-6Y0" firstAttribute="top" secondItem="jSm-4W-rBa" secondAttribute="bottom" constant="35" id="5ei-xN-Zl9"/>
+                            <constraint firstItem="nD9-EM-6Y0" firstAttribute="top" secondItem="Gb2-kB-eUm" secondAttribute="bottom" constant="35" id="7V4-Wd-GKu"/>
+                            <constraint firstItem="TJ6-j3-MKx" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="9F6-Qd-nLZ"/>
+                            <constraint firstItem="nD9-EM-6Y0" firstAttribute="top" secondItem="KZy-FU-BKL" secondAttribute="bottom" constant="100" id="GL0-uT-yLH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KZy-FU-BKL" secondAttribute="trailing" constant="-20" id="NmZ-Lc-i8T"/>
+                            <constraint firstItem="MY6-Xp-EBS" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="VxX-kz-SGM"/>
+                            <constraint firstItem="KZy-FU-BKL" firstAttribute="leading" secondItem="h6N-QZ-LYP" secondAttribute="leadingMargin" constant="-20" id="YF7-cR-cvK"/>
+                            <constraint firstItem="KpK-HN-9gw" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="dVg-QO-zWs"/>
+                            <constraint firstItem="jSm-4W-rBa" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="eyR-G4-VpF"/>
+                            <constraint firstItem="KZy-FU-BKL" firstAttribute="top" secondItem="C7o-1P-eob" secondAttribute="bottom" constant="140" id="fZO-ea-AAH"/>
+                            <constraint firstItem="pug-2n-nsS" firstAttribute="top" secondItem="MY6-Xp-EBS" secondAttribute="bottom" id="jgy-1Z-me6"/>
+                            <constraint firstItem="Gb2-kB-eUm" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="mSt-Y6-YqF"/>
+                            <constraint firstItem="pug-2n-nsS" firstAttribute="centerX" secondItem="h6N-QZ-LYP" secondAttribute="centerX" id="nkA-p8-DDr"/>
+                            <constraint firstItem="TJ6-j3-MKx" firstAttribute="leading" secondItem="h6N-QZ-LYP" secondAttribute="leadingMargin" constant="40" id="oaL-Gz-S5G"/>
+                            <constraint firstItem="KpK-HN-9gw" firstAttribute="top" secondItem="pug-2n-nsS" secondAttribute="bottom" id="pNF-8P-nB1"/>
+                            <constraint firstItem="TJ6-j3-MKx" firstAttribute="top" secondItem="C7o-1P-eob" secondAttribute="bottom" constant="48" id="tB6-kw-6S7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TJ6-j3-MKx" secondAttribute="trailing" constant="40" id="tol-q6-2xi"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="a9p-rS-Uh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cs7-vu-g2k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1757" y="-269"/>
+            <point key="canvasLocation" x="1667" y="-273"/>
         </scene>
         <!--OTMTabBarController-->
         <scene sceneID="Vsl-PE-kak">
